adding desk logic and reservation checkout

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title> FleDeBoB </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/website.ico">
 </head>
 <body class="background">
   <app-root></app-root>
